Update EULSS website: logos, styling fixes, article content, and navigation improvements - Replace all logos with new eulss logo.png across all pages - Update hero section text styling and responsive design - Fix social media icons styling (remove background boxes) - Update stat cards styling (white text on blue background) - Add new article page with SEO-optimized content - Fix case-sensitive Gallery.html navigation link - Update contact information (email and phone) - Add new official images for leadership positions - Fix CSS syntax errors and hero text wrapping issues

--- a/Gallery.html
+++ b/Gallery.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
       <div class="logo">
         <a href="/index.html">
-          <img src="../EULSS_logo-removebg-preview.png"
+          <img src="eulss logo.png"
                alt="EULSS Logo" />
         </a>
       </div>
@@ -23,7 +23,7 @@
         <li><a href="#">Resources</a></li>
         <li><a href="/comimittees.html">Committees</a></li>
          <li><a href="/News&Blog.html">News &amp; Blog</a></li>
-        <li><a class="active" href="gallery.html">Gallery</a></li>
+        <li><a class="active" href="/Gallery.html">Gallery</a></li>
         <li><a href="/alumni.html">Alumni</a></li>
       </ul>
       <div class="burger">
