--- a/News&Blog.html
+++ b/News&Blog.html
@@ -713,7 +713,7 @@
       <!-- Logo -->
       <div class="logo">
         <a href="/index.html">
-          <img src="EULSS_logo-removebg-preview.png" alt="EULSS Logo" />
+          <img src="eulss logo.png" alt="EULSS Logo" />
         </a>
       </div>
 
@@ -773,7 +773,7 @@
               <span class="read-time">5 min read</span>
             </div>
           </div>
-          <a href="#" class="read-more-btn">Read Full Article <i class="fas fa-arrow-right"></i></a>
+          <a href="/article-2025-graduates-reflect.html" class="read-more-btn">Read Full Article <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="featured-image">
           <img src="img src/lanre head.jpg" alt="Graduates celebrating" />
@@ -1020,7 +1020,7 @@
     <!-- Brand Section -->
     <div class="footer-section footer-brand">
       <a href="/index.html">
-        <img src="EULSS_logo-removebg-preview.png" alt="EULSS Logo" class="footer-logo" />
+        <img src="eulss logo.png" alt="EULSS Logo" class="footer-logo" />
       </a>
       <h3>Elizade University Law Students Society</h3>
       <p>Empowering legal minds through excellence, advocacy, and community service since 2010.</p>
@@ -1031,9 +1031,9 @@
         <a href="#" aria-label="Twitter" class="social-icon">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="mailto:info@elizade.edu.ng" aria-label="Email" class="social-icon">
-          <i class="fas fa-envelope"></i>
-        </a>
+        <a href="mailto:lawsaneu@gmail.com" aria-label="Email" class="social-icon">
+            <i class="fas fa-envelope"></i>
+          </a>
         <a href="#" aria-label="LinkedIn" class="social-icon">
           <i class="fab fa-linkedin"></i>
         </a>
@@ -1075,11 +1075,11 @@
         </div>
         <div class="contact-item">
           <i class="fas fa-phone"></i>
-          <p>+234 (0) 803 XXX XXXX</p>
+          <p>+2348166316897</p>
         </div>
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
-          <p>info@elizade.edu.ng</p>
+          <p>lawsaneu@gmail.com</p>
         </div>
       </div>
     </div>
