--- a/alumni.html
+++ b/alumni.html
@@ -772,7 +772,7 @@
       <!-- Logo -->
       <div class="logo">
         <a href="/index.html">
-          <img src="EULSS_logo-removebg-preview.png" alt="EULSS Logo" />
+          <img src="eulss logo.png" alt="EULSS Logo" />
         </a>
       </div>
 
@@ -889,7 +889,7 @@
       <!-- Brand Section -->
       <div class="footer-section footer-brand">
         <a href="/index.html">
-          <img src="EULSS_logo-removebg-preview.png" alt="EULSS Logo" class="footer-logo" />
+          <img src="eulss logo.png" alt="EULSS Logo" class="footer-logo" />
         </a>
         <h3>Elizade University Law Students Society</h3>
         <p>Empowering legal minds through excellence, advocacy, and community service since 2010.</p>
@@ -900,7 +900,7 @@
           <a href="#" aria-label="Twitter" class="social-icon">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="mailto:info@elizade.edu.ng" aria-label="Email" class="social-icon">
+          <a href="mailto:lawsaneu@gmail.com" aria-label="Email" class="social-icon">
             <i class="fas fa-envelope"></i>
           </a>
           <a href="#" aria-label="LinkedIn" class="social-icon">
@@ -944,11 +944,11 @@
           </div>
           <div class="contact-item">
             <i class="fas fa-phone"></i>
-            <p>+234 (0) 803 XXX XXXX</p>
+            <p>+2348166316897</p>
           </div>
           <div class="contact-item">
             <i class="fas fa-envelope"></i>
-            <p>info@elizade.edu.ng</p>
+            <p>lawsaneu@gmail.com</p>
           </div>
         </div>
       </div>
